# ChessEngine

./: .gitignore  CMakeLists.txt  ChessMove.cpp  ChessMove.h  ChessPiece.cpp  ChessPiece.h  ChessPosition.cpp  ChessPosition.h  Defs.h  Misc.cpp  Misc.h  MoveGenerator.cpp  MoveGenerator.h  main.cpp
